# ms-product/src/main/java/com/nttdata/banco/persistence/entity/Transaction.java
@@ -6,14 +6,18 @@ import lombok.Data;
 import lombok.NoArgsConstructor;
 import org.springframework.data.mongodb.core.mapping.Document;
 
+import java.time.LocalDate;
+
 @Document(collection = "transaction")
 @Data
 @AllArgsConstructor
 @NoArgsConstructor
 public class Transaction {
     private String id;
-    private String date;
+    private LocalDate date;
     private Double amount;
     private TransactionDTO.TypeEnum type;
+    private TransactionDTO.AccountTypeEnum accountType;
+    private String productNum;
     private String description;
 }
